# pylibhmm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  WARP.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint-workflows.yml  wheels.yml
docs/: API.md  COMPATIBILITY.md  DEVELOPMENT.md
examples/: basic_hmm.py  dax_regime_example.py  earthquake_example.py  elk_movement_example.py  sp500_regime_example.py  wind_direction_example.py
scripts/: lint-cpp.sh
src/pylibhmm/: __init__.py  __init__.pyi  _common.h  _core.cpp  _core.pyi
tests/: conftest.py  test_calculator_uaf_regression.py  test_distribution_fitting.py  test_distributions.py  test_hmm_algorithms.py  test_mv.py
