[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibhmm"
version = "0.3.5"
description = "Python bindings for libhmm — Hidden Markov Models and emission distributions via NumPy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/pylibhmm"]
editable.mode = "redirect"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=./.pytest_tmp"
